second box part

--- a/index.html
+++ b/index.html
@@ -13,14 +13,36 @@
             <div class="right-part">
                 <nav class="navigation">
                     <ul>
+                    <div class="line-holder">
                       <li><a href="index.html">Početna</a></li>
                       <hr class="line">
+                    </div>
                       <li><a href="">O Nama</a></li>
                       <li><a href="" onclick="comming()">Meni</a></li>
                       <li><a href="">Galerija</a></li>
                       <li><a href="">Kontakt</a></li>
                     </ul>
                   </nav>
+                  <img src="Lobby_logo_halfcolor.svg" class="logo-main">
+                  <h class="main-header">LOREM IPSUM</h>
+                  <p class="under-header">Lorem Ipsum is simply dummy text</p>
+            </div>
+        </div>
+
+        <div class="second-part">
+            <div class="box-1"></div>
+            <div class="box-2"></div>
+            <div class="box-3"></div>
+        </div>
+        <div class="second-part">
+            <div class="box-4">
+                <h class="box-header-1">MENI</h>
+                <p class="description-1">Lorem Ipsum is simply</p>
+            </div>
+            <div class="box-5"></div>
+            <div class="box-6">
+                <h class="box-header-2">GALERIJA</h>
+                <p class="description-2">Lorem Ipsum is simply</p>
             </div>
         </div>
     </body>
