third and fourth part

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
     <head>
        <title>Lobby</title>
+       <link
+       rel="icon"
+       type="image/x-icon"
+       class="js-site-favicon"
+       href="img/Lobby_logo_blue.ico"
+     />
        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1" />
        <link rel="stylesheet" type="text/css" href="css/styles.css?21" />
@@ -23,7 +29,7 @@
                       <li><a href="">Kontakt</a></li>
                     </ul>
                   </nav>
-                  <img src="Lobby_logo_halfcolor.svg" class="logo-main">
+                  <img src="img/Lobby_logo_halfcolor.svg" class="logo-main">
                   <h class="main-header">LOREM IPSUM</h>
                   <p class="under-header">Lorem Ipsum is simply dummy text</p>
             </div>
@@ -44,6 +50,28 @@
                 <h class="box-header-2">GALERIJA</h>
                 <p class="description-2">Lorem Ipsum is simply</p>
             </div>
+        </div>
+        <div class="third-part">
+            <div class="left-section-menu">
+              <h class="menu-header">MENI</h>
+              <a href="" class="button-holder">
+              <div class="line-button"></div>
+              <p class="button-menu">Pogledaj meni</p>
+              </a>
+            </div>
+            <div class="right-section-menu"> 
+              </div>
+        </div>
+
+        <div class="fourth-part">
+            <div class="greed-1"></div>
+            <div class="greed-2">
+                <div class="transparent-box">
+                <h class="gallery-header">GALERIJA</h>
+                <a href="" class="description-2">Pogledaj galeriju</a>
+                </div>
+            </div>
+            <div class="greed-3"></div>
         </div>
     </body>
 </html>
