--- a/index.html
+++ b/index.html
@@ -68,10 +68,35 @@
             <div class="greed-2">
                 <div class="transparent-box">
                 <h class="gallery-header">GALERIJA</h>
-                <a href="" class="description-2">Pogledaj galeriju</a>
+                <a href="" class="description-3">Pogledaj galeriju</a>
                 </div>
             </div>
             <div class="greed-3"></div>
         </div>
+
+        <div class="fifth-part">
+            
+            <div class="left-section-reservation"> 
+              </div>
+              <div class="right-section-reservation">
+                <h class="menu-header">REZERVACIJA</h>
+                <a href="" class="button-holder">
+                <div class="line-button"></div>
+                <p class="button-menu">Rezervisite mesto</p>
+                </a>
+              </div>
+        </div>
+
+        <div class="sixth-part">
+         <div class="transparent-align">
+            <div class="transparent-box">
+                <h class="gallery-header">O NAMA</h>
+                <a href="" class="description-3">Više o nama</a>
+            </div>
+         </div>
+            <div class="footer"></div>
+        </div>
+
+
     </body>
 </html>
