index pafe finish

--- a/index.html
+++ b/index.html
@@ -94,7 +94,18 @@
                 <a href="" class="description-3">Više o nama</a>
             </div>
          </div>
-            <div class="footer"></div>
+            <div class="footer">
+                <div class="social-media-icon">
+                    <img src="img/insta_icon.svg" class="insta">
+                    <img src="img/face_icon.svg" class="face">
+                    <p class="copyright"> Copyright © Lobby 2020</p>
+                </div>
+                <div class="info">
+                    <p class="info-style">Adresa 53, Zlatibor 31315, Srbija</p>
+                    <p class="info-style">+381 64 307 38 13</p>
+                    <p class="info-style">lobby.restaurant@gmail.com</p>
+                </div>
+            </div>
         </div>
 
 
