--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
        <link rel="stylesheet" type="text/css" href="css/styles.css?21" />
     </head>
     <body>
+        <div class="main-container">
         <div class="first-part">
             <div class="left-part">
     
@@ -108,6 +109,6 @@
             </div>
         </div>
 
-
+    </div>
     </body>
 </html>
