--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <meta name="viewport" content="width=device-width, initial-scale=1" />
        <link rel="stylesheet" type="text/css" href="css/styles.css?21" />
     </head>
-    <body>
+    <body class="page">
         <div class="main-container">
         <div class="first-part">
             <div class="left-part">
@@ -31,8 +31,10 @@
                     </ul>
                   </nav>
                   <img src="img/Lobby_logo_halfcolor.svg" class="logo-main">
-                  <h class="main-header">LOREM IPSUM</h>
-                  <p class="under-header">Lorem Ipsum is simply dummy text</p>
+                  <div class="header-align">
+                   <h class="main-header">LOREM IPSUM</h>
+                   <p class="under-header">Lorem Ipsum is simply dummy text</p>
+                  </div>
             </div>
         </div>
 
