meni page progress sidenav fixed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                       <hr class="line">
                     </div>
                       <li><a href="">O Nama</a></li>
-                      <li><a href="" onclick="comming()">Meni</a></li>
+                      <li><a href="meni.html" >Meni</a></li>
                       <li><a href="">Galerija</a></li>
                       <li><a href="">Kontakt</a></li>
                     </ul>
