--- a/meni.html
+++ b/meni.html
@@ -49,7 +49,7 @@
                   </div>
             </div>
         </div>
-<div class="bla">
+<div class="content-food">
         <div class="menu-left-bar">
             <a href="" class="breakfast">Doručak</a>
             <a href="" class="text-color">Predjelo</a>
@@ -64,7 +64,9 @@
             <a href="" class="text-color">Karta pića</a>
 
         </div>
-        <div class="bla2"></div>
+        <div class="food-section">
+            <h class="food-section-header">DORUČAK</h>
+        </div>
     </div>
 
        
