--- a/meni.html
+++ b/meni.html
@@ -23,11 +23,12 @@
         <div class="first-part">
             <div class="left-part-meni">
                 <div class="green-part">
+                    <div class="begining-image-holder">
+
+                    </div>
                 </div>
                 <img src="img/Lobby_logo_blue.svg" class="logo-blue">
-                <div class="begining-image-holder">
-
-                </div>
+                
             </div>
             <div class="right-part">
                 <nav class="navigation">
@@ -51,21 +52,105 @@
         </div>
 <div class="content-food">
         <div class="menu-left-bar">
-            <a href="" class="breakfast">Doručak</a>
-            <a href="" class="text-color">Predjelo</a>
-            <a href="" class="text-color">Obrok salate</a>
-            <a href="" class="text-color">Supe/Čorbe/Potaži</a>
-            <a href="" class="text-color">Pasta</a>
-            <a href="" class="text-color">Rižoto</a>
-            <a href="" class="text-color">Pizza</a>
-            <a href="" class="text-color">Burgeri</a>
-            <a href="" class="text-color">Glavna jela</a>
-            <a href="" class="text-color">Deserti</a>
-            <a href="" class="text-color">Karta pića</a>
+            <a href="#food-section-header" class="sidebar-item selected">Doručak</a>
+            <a href="#food-section-header" class="sidebar-item  predjelo" >Predjelo</a>
+            <a href="#food-section-header" class="sidebar-item  salate" >Obrok salate</a>
+            <a href="" class="sidebar-item supe">Supe/Čorbe/Potaži</a>
+            <a href="" class="sidebar-item pasta">Pasta</a>
+            <a href="" class="sidebar-item rizoto">Rižoto</a>
+            <a href="" class="sidebar-item pizza">Pizza</a>
+            <a href="" class="sidebar-item burgeri">Burgeri</a>
+            <a href="" class="sidebar-item glavno">Glavna jela</a>
+            <a href="" class="sidebar-item desert">Deserti</a>
+            <a href="" class="sidebar-item pice">Karta pića</a>
 
         </div>
         <div class="food-section">
-            <h class="food-section-header">DORUČAK</h>
+            <h id="food-section-header">DORUČAK</h>
+            <hr class="line-food-section">
+            <div class="row-food-options">
+                <div class="first-colum-food-image">
+                    <div class="description-food">
+                        <p class="food-name">Omlet</p>
+                    <div class="price-separation">
+                        <p class="ingredients">3 jaja sa dodacima po želji</p>
+                        <p class="price">370 rsd</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="second-colum-food-image">
+                    <div class="description-food-2">
+                        <p class="food-name">Omlet</p>
+                        <div class="price-separation">
+                            <p class="ingredients">3 jaja sa dodacima po želji</p>
+                            <p class="price">370 rsd</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row-food-options">
+                <div class="first-colum-food-image">
+                    <div class="description-food-2">
+                        <p class="food-name">Omlet</p>
+                    <div class="price-separation">
+                        <p class="ingredients">3 jaja sa dodacima po želji</p>
+                        <p class="price">370 rsd</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="second-colum-food-image">
+                    <div class="description-food">
+                        <p class="food-name">Omlet</p>
+                        <div class="price-separation">
+                            <p class="ingredients">3 jaja sa dodacima po želji</p>
+                            <p class="price">370 rsd</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row-food-options">
+                <div class="first-colum-food-image">
+                    <div class="description-food">
+                        <p class="food-name">Omlet</p>
+                    <div class="price-separation">
+                        <p class="ingredients">3 jaja sa dodacima po želji</p>
+                        <p class="price">370 rsd</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="second-colum-food-image">
+                    <div class="description-food-2">
+                        <p class="food-name">Omlet</p>
+                        <div class="price-separation">
+                            <p class="ingredients">3 jaja sa dodacima po želji</p>
+                            <p class="price">370 rsd</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row-food-options">
+                <div class="first-colum-food-image">
+                    <div class="description-food-2">
+                        <p class="food-name">Omlet</p>
+                    <div class="price-separation">
+                        <p class="ingredients">3 jaja sa dodacima po želji</p>
+                        <p class="price">370 rsd</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="second-colum-food-image">
+                    <div class="description-food">
+                        <p class="food-name">Omlet</p>
+                        <div class="price-separation">
+                            <p class="ingredients">3 jaja sa dodacima po želji</p>
+                            <p class="price">370 rsd</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
