mani poge finish

--- a/meni.html
+++ b/meni.html
@@ -67,7 +67,8 @@
         </div>
 
         <div class="food-section">
-            
+            <div class="left-green-part"></div>
+            <div class="food-representation">
             <h class="food-section-header" id="breakfast">DORUČAK</h>
             <hr class="line-food-section">
             <div class="row-food-options">
@@ -304,6 +305,7 @@
                     </div>
                 </div>
             </div>
+        </div>
 
         </div>
     </div>
