--- a/meni.html
+++ b/meni.html
@@ -39,7 +39,7 @@
                       <li><a href="meni.html" >Meni</a></li>
                       <hr class="line">
                       </div>
-                      <li><a href="">Galerija</a></li>
+                      <li><a href="galerija.html">Galerija</a></li>
                       <li><a href="">Kontakt</a></li>
                     </ul>
                   </nav>
