--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </div>
                       <li><a href="">O Nama</a></li>
                       <li><a href="meni.html" >Meni</a></li>
-                      <li><a href="">Galerija</a></li>
+                      <li><a href="galerija.html">Galerija</a></li>
                       <li><a href="">Kontakt</a></li>
                     </ul>
                   </nav>
