--- a/galerija.html
+++ b/galerija.html
@@ -51,7 +51,7 @@
                   </div>
             </div>
         </div>
-<div class="content-food">
+<div class="content-images">
         <div class="menu-left-bar-gallery">
             <a href="#enterijer" class="sidebar-item selected">Enterijer</a>
             <a href="#specijaliteti" class="sidebar-item" >Specijaliteti</a>
@@ -60,7 +60,7 @@
         <div class="image-section">
             <div class="left-green-part-gallery"></div>
             <div class="images-header">
-              <div class="food-representation">
+              <div class="images-representation">
                <h class="image-section-header" id="enterijer">ENTERIJER</h>
                <hr class="line-image-section">
               </div>
@@ -98,8 +98,8 @@
               </div>
 
 
-              <div class="food-representation">
-                <h class="image-section-header" id="enterijer">SPECIJALITETI</h>
+              <div class="images-representation">
+                <h class="image-section-header" id="specijaliteti">SPECIJALITETI</h>
                 <hr class="line-image-section">
                </div>
  
