--- a/index.html
+++ b/index.html
@@ -1,116 +1,110 @@
 <html>
-    <head>
-       <title>Lobby</title>
-       <link
-       rel="icon"
-       type="image/x-icon"
-       class="js-site-favicon"
-       href="img/Lobby_logo_blue.ico"
-     />
-       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-       <meta name="viewport" content="width=device-width, initial-scale=1" />
-       <link rel="stylesheet" type="text/css" href="css/styles.css?21" />
-    </head>
-    <body class="page">
-        <div class="main-container">
-        <div class="first-part">
-            <div class="left-part">
-    
-            </div>
-            <div class="right-part">
-                <nav class="navigation">
-                    <ul>
-                    <div class="line-holder">
-                      <li><a href="index.html">Početna</a></li>
-                      <hr class="line">
-                    </div>
-                      <li><a href="">O Nama</a></li>
-                      <li><a href="meni.html" >Meni</a></li>
-                      <li><a href="galerija.html">Galerija</a></li>
-                      <li><a href="">Kontakt</a></li>
-                    </ul>
-                  </nav>
-                  <img src="img/Lobby_logo_halfcolor.svg" class="logo-main">
-                  <div class="header-align">
-                   <h class="main-header">LOREM IPSUM</h>
-                   <p class="under-header">Lorem Ipsum is simply dummy text</p>
-                  </div>
-            </div>
-        </div>
-
-        <div class="second-part">
-            <div class="box-1"></div>
-            <div class="box-2"></div>
-            <div class="box-3"></div>
-        </div>
-        <div class="second-part">
-            <div class="box-4">
-                <h class="box-header-1">MENI</h>
-                <p class="description-1">Lorem Ipsum is simply</p>
-            </div>
-            <div class="box-5"></div>
-            <div class="box-6">
-                <h class="box-header-2">GALERIJA</h>
-                <p class="description-2">Lorem Ipsum is simply</p>
-            </div>
-        </div>
-        <div class="third-part">
-            <div class="left-section-menu">
-              <h class="menu-header">MENI</h>
-              <a href="" class="button-holder">
-              <div class="line-button"></div>
-              <p class="button-menu">Pogledaj meni</p>
-              </a>
-            </div>
-            <div class="right-section-menu"> 
+  <head>
+    <title>Lobby</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      class="js-site-favicon"
+      href="img/Lobby_logo_blue.ico"
+    />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css?21" />
+  </head>
+  <body class="page">
+    <div class="main-container">
+      <div class="first-part">
+        <div class="left-part"></div>
+        <div class="right-part">
+          <nav class="navigation">
+            <ul>
+              <div class="line-holder">
+                <li><a href="index.html">Početna</a></li>
+                <hr class="line" />
               </div>
+              <li><a href="onama.html">O Nama</a></li>
+              <li><a href="meni.html">Meni</a></li>
+              <li><a href="galerija.html">Galerija</a></li>
+              <li><a href="">Kontakt</a></li>
+            </ul>
+          </nav>
+          <img src="img/Lobby_logo_halfcolor.svg" class="logo-main" />
+          <div class="header-align">
+            <h class="main-header">LOREM IPSUM</h>
+            <p class="under-header">Lorem Ipsum is simply dummy text</p>
+          </div>
         </div>
+      </div>
 
-        <div class="fourth-part">
-            <div class="greed-1"></div>
-            <div class="greed-2">
-                <div class="transparent-box">
-                <h class="gallery-header">GALERIJA</h>
-                <a href="" class="description-3">Pogledaj galeriju</a>
-                </div>
-            </div>
-            <div class="greed-3"></div>
+      <div class="second-part">
+        <div class="box-1"></div>
+        <div class="box-2"></div>
+        <div class="box-3"></div>
+      </div>
+      <div class="second-part">
+        <div class="box-4">
+          <h class="box-header-1">MENI</h>
+          <p class="description-1">Lorem Ipsum is simply</p>
         </div>
-
-        <div class="fifth-part">
-            
-            <div class="left-section-reservation"> 
-              </div>
-              <div class="right-section-reservation">
-                <h class="menu-header">REZERVACIJA</h>
-                <a href="" class="button-holder">
-                <div class="line-button"></div>
-                <p class="button-menu">Rezervisite mesto</p>
-                </a>
-              </div>
+        <div class="box-5"></div>
+        <div class="box-6">
+          <h class="box-header-2">GALERIJA</h>
+          <p class="description-2">Lorem Ipsum is simply</p>
         </div>
-
-        <div class="sixth-part">
-         <div class="transparent-align">
-            <div class="transparent-box">
-                <h class="gallery-header">O NAMA</h>
-                <a href="" class="description-3">Više o nama</a>
-            </div>
-         </div>
-            <div class="footer">
-                <div class="social-media-icon">
-                    <img src="img/insta_icon.svg" class="insta">
-                    <img src="img/face_icon.svg" class="face">
-                    <p class="copyright"> Copyright © Lobby 2020</p>
-                </div>
-                <div class="info">
-                    <p class="info-style">Adresa 53, Zlatibor 31315, Srbija</p>
-                    <p class="info-style">+381 64 307 38 13</p>
-                    <p class="info-style">lobby.restaurant@gmail.com</p>
-                </div>
-            </div>
+      </div>
+      <div class="third-part">
+        <div class="left-section-menu">
+          <h class="menu-header">MENI</h>
+          <a href="" class="button-holder">
+            <div class="line-button"></div>
+            <p class="button-menu">Pogledaj meni</p>
+          </a>
         </div>
+        <div class="right-section-menu"></div>
+      </div>
 
+      <div class="fourth-part">
+        <div class="greed-1"></div>
+        <div class="greed-2">
+          <div class="transparent-box">
+            <h class="gallery-header">GALERIJA</h>
+            <a href="" class="description-3">Pogledaj galeriju</a>
+          </div>
+        </div>
+        <div class="greed-3"></div>
+      </div>
+
+      <div class="fifth-part">
+        <div class="left-section-reservation"></div>
+        <div class="right-section-reservation">
+          <h class="menu-header">REZERVACIJA</h>
+          <a href="" class="button-holder">
+            <div class="line-button"></div>
+            <p class="button-menu">Rezervisite mesto</p>
+          </a>
+        </div>
+      </div>
+
+      <div class="sixth-part">
+        <div class="transparent-align">
+          <div class="transparent-box">
+            <h class="gallery-header">O NAMA</h>
+            <a href="" class="description-3">Više o nama</a>
+          </div>
+        </div>
+        <div class="footer">
+          <div class="social-media-icon">
+            <img src="img/insta_icon.svg" class="insta" />
+            <img src="img/face_icon.svg" class="face" />
+            <p class="copyright">Copyright © Lobby 2020</p>
+          </div>
+          <div class="info">
+            <p class="info-style">Adresa 53, Zlatibor 31315, Srbija</p>
+            <p class="info-style">+381 64 307 38 13</p>
+            <p class="info-style">lobby.restaurant@gmail.com</p>
+          </div>
+        </div>
+      </div>
     </div>
-    </body>
+  </body>
 </html>
