--- a/galerija.html
+++ b/galerija.html
@@ -38,7 +38,7 @@
                 <li><a href="galerija.html">Galerija</a></li>
                 <hr class="line" />
               </div>
-              <li><a href="">Kontakt</a></li>
+              <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
           </nav>
           <div class="page-header-align">
