--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <li><a href="onama.html">O Nama</a></li>
               <li><a href="meni.html">Meni</a></li>
               <li><a href="galerija.html">Galerija</a></li>
-              <li><a href="">Kontakt</a></li>
+              <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
           </nav>
           <img src="img/Lobby_logo_halfcolor.svg" class="logo-main" />
