--- a/meni.html
+++ b/meni.html
@@ -37,7 +37,7 @@
                 <hr class="line" />
               </div>
               <li><a href="galerija.html">Galerija</a></li>
-              <li><a href="">Kontakt</a></li>
+              <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
           </nav>
           <div class="page-header-align">
