--- a/onama.html
+++ b/onama.html
@@ -39,7 +39,7 @@
               </div>
               <li><a href="meni.html">Meni</a></li>
               <li><a href="galerija.html">Galerija</a></li>
-              <li><a href="">Kontakt</a></li>
+              <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
           </nav>
           <div class="page-header-align">
