--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="third-part">
         <div class="left-section-menu">
           <h class="menu-header">MENI</h>
-          <a href="" class="button-holder">
+          <a href="meni.html" class="button-holder">
             <div class="line-button"></div>
             <p class="button-menu">Pogledaj meni</p>
           </a>
@@ -68,7 +68,7 @@
         <div class="greed-2">
           <div class="transparent-box">
             <h class="gallery-header">GALERIJA</h>
-            <a href="" class="description-3">Pogledaj galeriju</a>
+            <a href="galerija.html" class="description-3">Pogledaj galeriju</a>
           </div>
         </div>
         <div class="greed-3"></div>
@@ -78,7 +78,7 @@
         <div class="left-section-reservation"></div>
         <div class="right-section-reservation">
           <h class="menu-header">REZERVACIJA</h>
-          <a href="" class="button-holder">
+          <a href="kontakt.html" class="button-holder">
             <div class="line-button"></div>
             <p class="button-menu">Rezervisite mesto</p>
           </a>
@@ -89,7 +89,7 @@
         <div class="transparent-align">
           <div class="transparent-box">
             <h class="gallery-header">O NAMA</h>
-            <a href="" class="description-3">Više o nama</a>
+            <a href="onama.html" class="description-3">Više o nama</a>
           </div>
         </div>
         <div class="footer">
