--- a/galerija.html
+++ b/galerija.html
@@ -26,7 +26,9 @@
           <div class="green-part">
             <div class="begining-image-holder-gallery"></div>
           </div>
-          <img src="img/Lobby_logo_blue.svg" class="logo-blue" />
+          <a href="index.html">
+            <img src="img/Lobby_logo_blue.svg" class="logo-blue"
+          /></a>
         </div>
         <div class="right-part">
           <nav class="navigation">
