--- a/kontakt.html
+++ b/kontakt.html
@@ -25,14 +25,20 @@
       <div class="first-part">
         <div class="left-part-meni-contact">
           <div class="green-part-contact"></div>
-          <img src="img/Lobby_logo_blue.svg" class="logo-blue" />
-          <div class="page-header-align">
-            <h class="main-meni-header">KONTAKT</h>
-            <hr class="header-line" />
-            <p class="meni-under-header">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
-              rhoncus magna massa, id porttitor lectus lacinia id
-            </p>
+          <div class="logo-nav">
+            <div class="logo-header-holder">
+              <a href="index.html">
+                <img src="img/Lobby_logo_blue.svg" class="logo-blue"
+              /></a>
+              <div class="page-header-align">
+                <h class="main-meni-header">KONTAKT</h>
+                <hr class="header-line" />
+                <p class="meni-under-header">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+                  rhoncus magna massa, id porttitor lectus lacinia id
+                </p>
+              </div>
+            </div>
           </div>
         </div>
         <div class="right-part">
