--- a/onama.html
+++ b/onama.html
@@ -27,7 +27,9 @@
           <div class="green-part-onama">
             <div class="begining-image-holder-onama"></div>
           </div>
-          <img src="img/Lobby_logo_blue.svg" class="logo-blue" />
+          <a href="index.html">
+            <img src="img/Lobby_logo_blue.svg" class="logo-blue"
+          /></a>
         </div>
         <div class="right-part">
           <nav class="navigation">
