--- a/meni.html
+++ b/meni.html
@@ -25,7 +25,9 @@
           <div class="green-part">
             <div class="begining-image-holder"></div>
           </div>
-          <img src="img/Lobby_logo_blue.svg" class="logo-blue" />
+          <a href="index.html">
+            <img src="img/Lobby_logo_blue.svg" class="logo-blue"
+          /></a>
         </div>
         <div class="right-part">
           <nav class="navigation">
