--- a/kontakt.html
+++ b/kontakt.html
@@ -33,7 +33,7 @@
               <div class="page-header-align">
                 <h class="main-meni-header">KONTAKT</h>
                 <hr class="header-line" />
-                <p class="meni-under-header">
+                <p class="meni-under-header contact-menu">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
                   rhoncus magna massa, id porttitor lectus lacinia id
                 </p>
