--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </ul>
           </nav>
           <img src="img/Lobby_logo_halfcolor.svg" class="logo-main" />
+          <img src="img/Lobby_logo_white.svg" class="logo-main-mobile" />
           <div class="header-align">
             <h class="main-header">LOREM IPSUM</h>
             <p class="under-header">Lorem Ipsum is simply dummy text</p>
@@ -52,6 +53,26 @@
           <p class="description-2">Lorem Ipsum is simply</p>
         </div>
       </div>
+
+      <div class="second-part-mobile">
+        <div class="box-1"></div>
+        <div class="box-2"></div>
+      </div>
+      <div class="second-part-mobile">
+        <div class="box-4">
+          <h class="box-header-1">MENI</h>
+          <p class="description-1">Lorem Ipsum is simply</p>
+        </div>
+        <div class="box-3"></div>
+      </div>
+      <div class="second-part-mobile">
+        <div class="box-5"></div>
+        <div class="box-6">
+          <h class="box-header-2">GALERIJA</h>
+          <p class="description-2">Lorem Ipsum is simply</p>
+        </div>
+      </div>
+
       <div class="third-part">
         <div class="left-section-menu">
           <h class="menu-header">MENI</h>
@@ -60,7 +81,9 @@
             <p class="button-menu">Pogledaj meni</p>
           </a>
         </div>
-        <div class="right-section-menu"></div>
+        <div class="right-section-menu">
+          <img src="img/img_patern_1.svg" class="img-pater-mobil" />
+        </div>
       </div>
 
       <div class="fourth-part">
