--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </a>
         </div>
         <div class="right-section-menu">
-          <img src="img/img_patern_1.svg" class="img-pater-mobil" />
+          <img src="img/img_patern_1.svg" class="img-patern-mobil" />
         </div>
       </div>
 
@@ -96,6 +96,8 @@
         </div>
         <div class="greed-3"></div>
       </div>
+
+      <div class="fourth-part-mobile"></div>
 
       <div class="fifth-part">
         <div class="left-section-reservation"></div>
