mobile change fourth part

--- a/index.html
+++ b/index.html
@@ -96,8 +96,22 @@
         </div>
         <div class="greed-3"></div>
       </div>
-
-      <div class="fourth-part-mobile"></div>
+      <div class="fourth-part-mobile-holder">
+        <div class="test">
+          <div class="transparent-box-mobile">
+            <h class="gallery-header">GALERIJA</h>
+            <a href="galerija.html" class="description-3">Pogledaj galeriju</a>
+          </div>
+        </div>
+        <div class="fourth-part-mobile">
+          <div class="greed-1-mobile"></div>
+          <div class="greed-2-mobile"></div>
+        </div>
+        <div class="fourth-part-mobile">
+          <div class="greed-2-mobile"></div>
+          <div class="greed-1-mobile"></div>
+        </div>
+      </div>
 
       <div class="fifth-part">
         <div class="left-section-reservation"></div>
