index-page mobile finish

--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
       </div>
 
       <div class="fifth-part">
-        <div class="left-section-reservation"></div>
+        <div class="left-section-reservation">
+          <img src="img/img_patern_12.svg" class="img-patern-mobil" />
+        </div>
         <div class="right-section-reservation">
           <h class="menu-header">REZERVACIJA</h>
           <a href="kontakt.html" class="button-holder">
@@ -141,6 +143,7 @@
             <p class="info-style">Adresa 53, Zlatibor 31315, Srbija</p>
             <p class="info-style">+381 64 307 38 13</p>
             <p class="info-style">lobby.restaurant@gmail.com</p>
+            <p class="copyright-mobile">Copyright © Lobby 2020</p>
           </div>
         </div>
       </div>
