last changes index page mobile

--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
               >&times;</a
             >
             <div class="overlay-content">
-              <a href="#">About</a>
-              <a href="#">Services</a>
-              <a href="#">Clients</a>
-              <a href="#">Contact</a>
+              <a href="index.html">Početna</a>
+              <a href="onama.html">O Nama</a>
+              <a href="meni.html">Meni</a>
+              <a href="galerija.html">Galerija</a>
+              <a href="kontakt.html">Kontakt</a>
             </div>
           </div>
           <div class="header-align">
