menu page mobile

--- a/meni.html
+++ b/meni.html
@@ -25,6 +25,7 @@
           <div class="green-part">
             <div class="begining-image-holder"></div>
           </div>
+
           <a href="index.html">
             <img src="img/Lobby_logo_blue.svg" class="logo-blue"
           /></a>
@@ -73,6 +74,19 @@
         <div class="food-section">
           <div class="left-green-part"></div>
           <div class="food-representation">
+            <div class="menu-left-bar-mobile">
+              <a href="#breakfast" class="sidebar-item selected">Doručak</a>
+              <a href="#appetizer" class="sidebar-item">Predjelo</a>
+              <a href="#salad" class="sidebar-item">Obrok salate</a>
+              <a href="" class="sidebar-item supe">Supe/Čorbe/Potaži</a>
+              <a href="" class="sidebar-item pasta">Pasta</a>
+              <a href="" class="sidebar-item rizoto">Rižoto</a>
+              <a href="" class="sidebar-item pizza">Pizza</a>
+              <a href="" class="sidebar-item burgeri">Burgeri</a>
+              <a href="" class="sidebar-item glavno">Glavna jela</a>
+              <a href="" class="sidebar-item desert">Deserti</a>
+              <a href="" class="sidebar-item pice">Karta pića</a>
+            </div>
             <h class="food-section-header" id="breakfast">DORUČAK</h>
             <hr class="line-food-section" />
             <div class="row-food-options">
@@ -323,6 +337,7 @@
           <p class="info-style">Adresa 53, Zlatibor 31315, Srbija</p>
           <p class="info-style">+381 64 307 38 13</p>
           <p class="info-style">lobby.restaurant@gmail.com</p>
+          <p class="copyright-mobile">Copyright © Lobby 2020</p>
         </div>
       </div>
     </div>
