--- a/meni.html
+++ b/meni.html
@@ -29,6 +29,24 @@
           <a href="index.html">
             <img src="img/Lobby_logo_blue.svg" class="logo-blue"
           /></a>
+          <span
+            class="nav-bar"
+            style="font-size: 30px; cursor: pointer"
+            onclick="openNav()"
+            >&#9776;</span
+          >
+          <div id="myNav" class="overlay">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+              >&times;</a
+            >
+            <div class="overlay-content">
+              <a href="index.html">Početna</a>
+              <a href="onama.html">O Nama</a>
+              <a href="meni.html">Meni</a>
+              <a href="galerija.html">Galerija</a>
+              <a href="kontakt.html">Kontakt</a>
+            </div>
+          </div>
         </div>
         <div class="right-part">
           <nav class="navigation">
@@ -342,5 +360,6 @@
       </div>
     </div>
     <script src="scroll.js"></script>
+    <script src="menu.js"></script>
   </body>
 </html>
