fixing problem safari

--- a/meni.html
+++ b/meni.html
@@ -61,6 +61,7 @@
               <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
           </nav>
+          <div class="left-green-part-1"></div>
           <div class="page-header-align">
             <h class="main-meni-header">MENI</h>
             <hr class="header-line" />
