--- a/galerija.html
+++ b/galerija.html
@@ -61,6 +61,7 @@
               <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
           </nav>
+          <div class="left-green-part-2"></div>
           <div class="page-header-align">
             <h class="main-meni-header">GALERIJA</h>
             <hr class="header-line" />
@@ -82,76 +83,82 @@
 
         <div class="image-section">
           <div class="left-green-part-gallery"></div>
-          <div class="images-header">
-            <div class="images-representation">
-              <h class="image-section-header" id="enterijer">ENTERIJER</h>
-              <hr class="line-image-section" />
+          <div class="menu-gallery-content-holder">
+            <div class="menu-left-bar-mobile-gallery">
+              <a href="#enterijer" class="sidebar-item selected">Enterijer</a>
+              <a href="#specijaliteti" class="sidebar-item">Specijaliteti</a>
             </div>
+            <div class="images-header">
+              <div class="images-representation">
+                <h class="image-section-header" id="enterijer">ENTERIJER</h>
+                <hr class="line-image-section" />
+              </div>
 
-            <div class="row">
-              <div class="column">
-                <img src="img/Mask_Group_20.png" style="width: 100%" />
-                <img src="img/Mask_Group_201.png" style="width: 100%" />
-                <img src="img/Mask_Group_21.png" style="width: 100%" />
-                <img src="img/Mask_Group_22.png" style="width: 100%" />
-                <img src="img/Mask_Group_23.png" style="width: 100%" />
-                <img src="img/Mask_Group_26.png" style="width: 100%" />
-                <img src="img/Mask_Group_21.png" style="width: 100%" />
+              <div class="row">
+                <div class="column">
+                  <img src="img/Mask_Group_20.png" style="width: 100%" />
+                  <img src="img/Mask_Group_201.png" style="width: 100%" />
+                  <img src="img/Mask_Group_21.png" style="width: 100%" />
+                  <img src="img/Mask_Group_22.png" style="width: 100%" />
+                  <img src="img/Mask_Group_23.png" style="width: 100%" />
+                  <img src="img/Mask_Group_26.png" style="width: 100%" />
+                  <img src="img/Mask_Group_21.png" style="width: 100%" />
+                </div>
+                <div class="column">
+                  <img src="img/Mask_Group_20.png" style="width: 100%" />
+                  <img src="img/Mask_Group_21.png" style="width: 100%" />
+                  <img src="img/Mask_Group_201.png" style="width: 100%" />
+                  <img src="img/Mask_Group_23.png" style="width: 100%" />
+                  <img src="img/Mask_Group_22.png" style="width: 100%" />
+                  <img src="img/Mask_Group_21.png" style="width: 100%" />
+                  <img src="img/Mask_Group_26.png" style="width: 100%" />
+                </div>
+                <div class="column">
+                  <img src="img/Mask_Group_20.png" style="width: 100%" />
+                  <img src="img/Mask_Group_201.png" style="width: 100%" />
+                  <img src="img/Mask_Group_21.png" style="width: 100%" />
+                  <img src="img/Mask_Group_22.png" style="width: 100%" />
+                  <img src="img/Mask_Group_23.png" style="width: 100%" />
+                  <img src="img/Mask_Group_26.png" style="width: 100%" />
+                  <img src="img/Mask_Group_21.png" style="width: 100%" />
+                </div>
               </div>
-              <div class="column">
-                <img src="img/Mask_Group_20.png" style="width: 100%" />
-                <img src="img/Mask_Group_21.png" style="width: 100%" />
-                <img src="img/Mask_Group_201.png" style="width: 100%" />
-                <img src="img/Mask_Group_23.png" style="width: 100%" />
-                <img src="img/Mask_Group_22.png" style="width: 100%" />
-                <img src="img/Mask_Group_21.png" style="width: 100%" />
-                <img src="img/Mask_Group_26.png" style="width: 100%" />
-              </div>
-              <div class="column">
-                <img src="img/Mask_Group_20.png" style="width: 100%" />
-                <img src="img/Mask_Group_201.png" style="width: 100%" />
-                <img src="img/Mask_Group_21.png" style="width: 100%" />
-                <img src="img/Mask_Group_22.png" style="width: 100%" />
-                <img src="img/Mask_Group_23.png" style="width: 100%" />
-                <img src="img/Mask_Group_26.png" style="width: 100%" />
-                <img src="img/Mask_Group_21.png" style="width: 100%" />
-              </div>
-            </div>
 
-            <div class="images-representation">
-              <h class="image-section-header" id="specijaliteti"
-                >SPECIJALITETI</h
-              >
-              <hr class="line-image-section" />
-            </div>
+              <div class="images-representation">
+                <h class="image-section-header" id="specijaliteti"
+                  >SPECIJALITETI</h
+                >
+                <hr class="line-image-section" />
+              </div>
 
-            <div class="row">
-              <div class="column">
-                <img src="img/Mask_Group_20.png" style="width: 100%" />
-                <img src="img/Mask_Group_201.png" style="width: 100%" />
-                <img src="img/Mask_Group_21.png" style="width: 100%" />
-                <img src="img/Mask_Group_22.png" style="width: 100%" />
-                <img src="img/Mask_Group_23.png" style="width: 100%" />
-                <img src="img/Mask_Group_26.png" style="width: 100%" />
-                <img src="img/Mask_Group_21.png" style="width: 100%" />
-              </div>
-              <div class="column">
-                <img src="img/Mask_Group_20.png" style="width: 100%" />
-                <img src="img/Mask_Group_21.png" style="width: 100%" />
-                <img src="img/Mask_Group_201.png" style="width: 100%" />
-                <img src="img/Mask_Group_23.png" style="width: 100%" />
-                <img src="img/Mask_Group_22.png" style="width: 100%" />
-                <img src="img/Mask_Group_21.png" style="width: 100%" />
-                <img src="img/Mask_Group_26.png" style="width: 100%" />
-              </div>
-              <div class="column">
-                <img src="img/Mask_Group_20.png" style="width: 100%" />
-                <img src="img/Mask_Group_201.png" style="width: 100%" />
-                <img src="img/Mask_Group_21.png" style="width: 100%" />
-                <img src="img/Mask_Group_22.png" style="width: 100%" />
-                <img src="img/Mask_Group_23.png" style="width: 100%" />
-                <img src="img/Mask_Group_26.png" style="width: 100%" />
-                <img src="img/Mask_Group_21.png" style="width: 100%" />
+              <div class="row">
+                <div class="column">
+                  <img src="img/Mask_Group_20.png" style="width: 100%" />
+                  <img src="img/Mask_Group_201.png" style="width: 100%" />
+                  <img src="img/Mask_Group_21.png" style="width: 100%" />
+                  <img src="img/Mask_Group_22.png" style="width: 100%" />
+                  <img src="img/Mask_Group_23.png" style="width: 100%" />
+                  <img src="img/Mask_Group_26.png" style="width: 100%" />
+                  <img src="img/Mask_Group_21.png" style="width: 100%" />
+                </div>
+                <div class="column">
+                  <img src="img/Mask_Group_20.png" style="width: 100%" />
+                  <img src="img/Mask_Group_21.png" style="width: 100%" />
+                  <img src="img/Mask_Group_201.png" style="width: 100%" />
+                  <img src="img/Mask_Group_23.png" style="width: 100%" />
+                  <img src="img/Mask_Group_22.png" style="width: 100%" />
+                  <img src="img/Mask_Group_21.png" style="width: 100%" />
+                  <img src="img/Mask_Group_26.png" style="width: 100%" />
+                </div>
+                <div class="column">
+                  <img src="img/Mask_Group_20.png" style="width: 100%" />
+                  <img src="img/Mask_Group_201.png" style="width: 100%" />
+                  <img src="img/Mask_Group_21.png" style="width: 100%" />
+                  <img src="img/Mask_Group_22.png" style="width: 100%" />
+                  <img src="img/Mask_Group_23.png" style="width: 100%" />
+                  <img src="img/Mask_Group_26.png" style="width: 100%" />
+                  <img src="img/Mask_Group_21.png" style="width: 100%" />
+                </div>
               </div>
             </div>
           </div>
@@ -168,6 +175,7 @@
           <p class="info-style">Adresa 53, Zlatibor 31315, Srbija</p>
           <p class="info-style">+381 64 307 38 13</p>
           <p class="info-style">lobby.restaurant@gmail.com</p>
+          <p class="copyright-mobile">Copyright © Lobby 2020</p>
         </div>
       </div>
     </div>
