--- a/kontakt.html
+++ b/kontakt.html
@@ -30,6 +30,28 @@
               <a href="index.html">
                 <img src="img/Lobby_logo_blue.svg" class="logo-blue"
               /></a>
+
+              <span
+                class="nav-bar"
+                style="font-size: 30px; cursor: pointer"
+                onclick="openNav()"
+                >&#9776;</span
+              >
+              <div id="myNav" class="overlay">
+                <a
+                  href="javascript:void(0)"
+                  class="closebtn"
+                  onclick="closeNav()"
+                  >&times;</a
+                >
+                <div class="overlay-content">
+                  <a href="index.html">Početna</a>
+                  <a href="onama.html">O Nama</a>
+                  <a href="meni.html">Meni</a>
+                  <a href="galerija.html">Galerija</a>
+                  <a href="kontakt.html">Kontakt</a>
+                </div>
+              </div>
               <div class="page-header-align">
                 <h class="main-meni-header">KONTAKT</h>
                 <hr class="header-line" />
@@ -90,6 +112,7 @@
             allowfullscreen=""
             aria-hidden="false"
             tabindex="0"
+            class="map-link"
           ></iframe>
         </div>
       </div>
@@ -104,9 +127,11 @@
           <p class="info-style">Adresa 53, Zlatibor 31315, Srbija</p>
           <p class="info-style">+381 64 307 38 13</p>
           <p class="info-style">lobby.restaurant@gmail.com</p>
+          <p class="copyright-mobile">Copyright © Lobby 2020</p>
         </div>
       </div>
     </div>
-    <script src="scroll.js"></script>
+
+    <script src="menu.js"></script>
   </body>
 </html>
