--- a/onama.html
+++ b/onama.html
@@ -9,6 +9,7 @@
     />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="format-detection" content="telephone=no" />
     <link rel="stylesheet" type="text/css" href="css/styles.css?21" />
     <link rel="stylesheet" type="text/css" href="css/onama.css" />
     <link rel="stylesheet" type="text/css" href="css/gallery.css" />
