--- a/meni.html
+++ b/meni.html
@@ -53,7 +53,7 @@
           <nav class="navigation">
             <ul>
               <li><a href="index.html">Početna</a></li>
-              <li><a href="">O Nama</a></li>
+              <li><a href="onama.html">O Nama</a></li>
               <div class="line-holder">
                 <li><a href="meni.html">Meni</a></li>
                 <hr class="line" />
