--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
           <img src="img/img_patern_12.svg" class="img-patern-mobil" />
         </div>
         <div class="right-section-reservation">
-          <h class="menu-header">REZERVACIJA</h>
+          <h class="menu-header"> KONTAKT</h>
           <a href="kontakt.html" class="button-holder">
             <div class="line-button"></div>
-            <p class="button-menu">Rezervisite mesto</p>
+            <p class="button-menu">Kontaktirajte nas</p>
           </a>
         </div>
       </div>
