--- a/galerija.html
+++ b/galerija.html
@@ -28,7 +28,7 @@
             <div class="begining-image-holder-gallery"></div>
           </div>
           <a href="index.html">
-            <img src="img/Lobby_logo_blue.svg" class="logo-blue"
+            <img src="img/logo_princip_gold_new.svg" class="logo-blue"
           /></a>
           <span
             class="nav-bar"
