--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
               <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
           </nav>
-          <img src="img/Lobby_logo_halfcolor.svg" class="logo-main" />
-          <img src="img/Lobby_logo_white.svg" class="logo-main-mobile" />
+          <img src="img/logo_princip_gold_new.svg" class="logo-main" />
+          <img src="img/logo_princip_white.svg" class="logo-main-mobile" />
           <span
             class="nav-bar"
             style="font-size: 30px; cursor: pointer"
@@ -50,8 +50,10 @@
             </div>
           </div>
           <div class="header-align">
-            <h class="main-header">LOREM IPSUM</h>
-            <p class="under-header">Lorem Ipsum is simply dummy text</p>
+            <h class="main-header">DOBRODOŠLI U PRINCIP</h>
+            <p class="under-header">
+              Postite nas i osetite gastronomski užitak
+            </p>
           </div>
         </div>
       </div>
@@ -101,7 +103,7 @@
           </a>
         </div>
         <div class="right-section-menu">
-          <img src="img/img_patern_1.svg" class="img-patern-mobil" />
+          <img src="img/Group_16 _mobile.png" class="img-patern-mobil" />
         </div>
       </div>
 
@@ -134,7 +136,7 @@
 
       <div class="fifth-part">
         <div class="left-section-reservation">
-          <img src="img/img_patern_12.svg" class="img-patern-mobil" />
+          <img src="img/Group_15 _mobile.png" class="img-patern-mobil" />
         </div>
         <div class="right-section-reservation">
           <h class="menu-header"> KONTAKT</h>
