--- a/onama.html
+++ b/onama.html
@@ -29,7 +29,7 @@
             <div class="begining-image-holder-onama"></div>
           </div>
           <a href="index.html">
-            <img src="img/Lobby_logo_blue.svg" class="logo-blue"
+            <img src="img/logo_princip_gold_new.svg" class="logo-blue"
           /></a>
           <span
             class="nav-bar"
