--- a/kontakt.html
+++ b/kontakt.html
@@ -29,7 +29,7 @@
           <div class="logo-nav">
             <div class="logo-header-holder">
               <a href="index.html">
-                <img src="img/Lobby_logo_blue.svg" class="logo-blue"
+                <img src="img/logo_princip_gold_new.svg" class="logo-blue"
               /></a>
 
               <span
