--- a/index.html
+++ b/index.html
@@ -158,13 +158,14 @@
           <div class="social-media-icon">
             <img src="img/insta_icon.svg" class="insta" />
             <img src="img/face_icon.svg" class="face" />
-            <p class="copyright">Copyright © Lobby 2020</p>
+            <p class="copyright">Copyright © Princip 2020</p>
           </div>
           <div class="info">
-            <p class="info-style">Adresa 53, Zlatibor 31315, Srbija</p>
-            <p class="info-style">+381 64 307 38 13</p>
-            <p class="info-style">lobby.restaurant@gmail.com</p>
-            <p class="copyright-mobile">Copyright © Lobby 2020</p>
+            <p class="info-style">
+              Ekološko naselje Jelena Anžujska, Zlatibor 31315, Srbija
+            </p>
+            <p class="info-style">+381 64 4666 088</p>
+            <p class="copyright-mobile">Copyright © Princip 2020</p>
           </div>
         </div>
       </div>
