--- a/onama.html
+++ b/onama.html
@@ -83,7 +83,7 @@
       <div class="content-images">
         <div class="image-section">
           <div class="left-green-part-gallery"></div>
-          <div class="text-image-onama-wrapper">
+          <div class="text-image-onama-wrapper"></div>
             <p class="meni-under-header down-text">
               It is a long established fact that a reader will be distracted by
               the readable content of a page when looking at its layout. The
@@ -94,21 +94,9 @@
               their default model text, and a search for 'lorem ipsum' will
               uncover many web sites still in their infancy.
             </p>
-            <div class="image-next-to-text"></div>
+          
           </div>
-          <div class="text-image-onama-wrapper-mobile">
-            <div class="image-next-to-text"></div>
-            <p class="meni-under-header down-text">
-              It is a long established fact that a reader will be distracted by
-              the readable content of a page when looking at its layout. The
-              point of using Lorem Ipsum is that it has a more-or-less normal
-              distribution of letters, as opposed to using 'Content here,
-              content here', making it look like readable English. Many desktop
-              publishing packages and web page editors now use Lorem Ipsum as
-              their default model text, and a search for 'lorem ipsum' will
-              uncover many web sites still in their infancy.
-            </p>
-          </div>
+          
         </div>
       </div>
 
@@ -116,13 +104,14 @@
         <div class="social-media-icon">
           <img src="img/insta_icon.svg" class="insta" />
           <img src="img/face_icon.svg" class="face" />
-          <p class="copyright">Copyright © Lobby 2020</p>
+          <p class="copyright">Copyright © Princip 2020</p>
         </div>
         <div class="info">
-          <p class="info-style">Adresa 53, Zlatibor 31315, Srbija</p>
-          <p class="info-style">+381 64 307 38 13</p>
-          <p class="info-style">lobby.restaurant@gmail.com</p>
-          <p class="copyright-mobile">Copyright © Lobby 2020</p>
+          <p class="info-style">
+            Ekološko naselje Jelena Anžujska, Zlatibor 31315, Srbija
+          </p>
+          <p class="info-style">+381 64 4666 088</p>
+          <p class="copyright-mobile">Copyright © Princip 2020</p>
         </div>
       </div>
     </div>
