--- a/galerija.html
+++ b/galerija.html
@@ -173,8 +173,12 @@
           <p class="copyright">Copyright © Princip 2020</p>
         </div>
         <div class="info">
-          <p class="info-style">
+          <p class="info-style-adress">
             Ekološko naselje Jelena Anžujska, Zlatibor 31315, Srbija
+          </p>
+          <p class="info-style-mobile">
+            Ekološko naselje Jelena Anžujska,<br />
+            Zlatibor 31315, Srbija
           </p>
           <p class="info-style">+381 64 4666 088</p>
           <p class="copyright-mobile">Copyright © Princip 2020</p>
