--- a/kontakt.html
+++ b/kontakt.html
@@ -87,25 +87,26 @@
               <div class="icons-contact">
                 <img src="img/pin.svg" />
                 <img src="img/phone.svg" />
-                <img src="img/Icon_material-email.svg" />
               </div>
               <div class="contact-information">
-                <p class="adress">Adresa 53, Zlatibor 31315, Srbija</p>
-                <p class="phone">+381 64 307 38 13</p>
-                <p class="mail">lobby.restaurant@gmail.com</p>
+                <p class="adress">
+                  Ekološko naselje Jelena Anžujska,<br />
+                  Zlatibor 31315, Srbija
+                </p>
+                <p class="phone">+381 64 4666 088</p>
               </div>
             </div>
 
             <div class="working-hours">
               <p class="wh">Radno vreme:</p>
-              <p class="ww">Ponedeljak - Četvrtak 08:00 - 00:00</p>
-              <p class="weekend">Petak - Nedelja 08:00 - 01:00</p>
+              <p class="ww">Ponedeljak - Četvrtak 08:00 - 23:00</p>
+              <p class="weekend">Petak - Nedelja 08:00 - 23:00</p>
             </div>
           </div>
         </div>
         <div class="map">
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2883.1574819406314!2d19.704830314858285!3d43.728055255606066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47582f8463a6fc41%3A0xebef3e4b6d7415d7!2sMiladina%20Pe%C4%87inara%2C%20Zlatibor!5e0!3m2!1sen!2srs!4v1604705455543!5m2!1sen!2srs"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2883.253710800401!2d19.71012731485818!3d43.72605605573558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47582ff8b33c6abb%3A0x58a624fe87ece6e6!2sPrincip%20Restaurant%20Zlatibor!5e0!3m2!1sen!2srs!4v1616521655791!5m2!1sen!2srs"
             width="100%"
             height="700px"
             frameborder="0"
@@ -125,8 +126,12 @@
           <p class="copyright">Copyright © Princip 2020</p>
         </div>
         <div class="info">
-          <p class="info-style">
+          <p class="info-style-adress">
             Ekološko naselje Jelena Anžujska, Zlatibor 31315, Srbija
+          </p>
+          <p class="info-style-mobile">
+            Ekološko naselje Jelena Anžujska,<br />
+            Zlatibor 31315, Srbija
           </p>
           <p class="info-style">+381 64 4666 088</p>
           <p class="copyright-mobile">Copyright © Princip 2020</p>
